name:                wrench
category:            Graphics
version:             0.1.0.0
license:             GPL-3
cabal-version:       >=1.10
license-file:        LICENSE
author:              Philipp Middendorf
maintainer:          Philipp Middendorf <pmidden@secure.mailbox.org>
--stability:           provisional (das Feld ist "defunct")
homepage:            http://github.com/pmiddend/wrench/
bug-reports:         http://github.com/pmiddend/wrench/issues
copyright:           Copyright (C) 2014-2015 Philipp Middendorf
build-type:          Simple
tested-with:         GHC == 7.8.3
synopsis:            A small 2D graphics frontend similar to gloss
--description:         

source-repository head
  type: git
  location: git://github.com/pmiddend/wrench.git

flag sge
  Description: Use SGE as backend
  Default: False

flag sdl
  Description: Use hackage sdl2 as backend
  Default: True

flag openal
  Description: Use openal as audio backend
  Default: True

library
  hs-source-dirs:      src
  other-modules:       Wrench.Filesystem
                     , Wrench.List
                     , Wrench.Internal.Picture
  exposed-modules:     Wrench.Angular
                     , Wrench.Color
                     , Wrench.Engine
                     , Wrench.AudioData
                     , Wrench.MonadGame
                     , Wrench.FloatType
                     , Wrench.ImageData
                     , Wrench.Keysym
                     , Wrench.Point
                     , Wrench.Rectangle
                     , Wrench.Time
                     , Wrench.BitmapFont.Render
                     , Wrench.BitmapFont.RenderResult
                     , Wrench.AudioFile
                     , Wrench.Picture
                     , Wrench.Platform
                     , Wrench.RenderPositionMode
                     , Wrench.Keydowns
                     , Wrench.MouseButtonMovement
                     , Wrench.MouseButton
                     , Wrench.SpriteIdentifier
                     , Wrench.CommonGeometry
                     , Wrench.KeyMovement
                     , Wrench.Event
                     , Wrench.ImageParser
                     , Wrench.Animation
                     , Wrench.AnimMap
                     , Wrench.AnimId
                     , Wrench.PlayMode
                     , Wrench.ImageId
  build-depends:       base >=4.7 && <4.9
                     , linear
                     , lens
                     , containers
                     , text
                     , attoparsec
                     , filepath
                     , directory
                     , monad-loops
                     , clock
                     , transformers
                     , MonadRandom
                     , random
                     , scientific
                     , mtl
                     , lifted-base
                     , classy-prelude
                     , resourcet
                     , vector
  if flag(openal)
    build-depends:     al, byteorder
    other-modules:     Wrench.AL2D.AlBufferFormat
                     , Wrench.AL2D.AlBuffer
                     , Wrench.AL2D.AlSource
                     , Wrench.AL2D.AlcContextFlag
                     , Wrench.AL2D.AlHelper
                     , Wrench.AL2D.FFIHelper
    cpp-options:       -DUSE_OPENAL
  if flag(sge)
    build-depends:     hsge
    cpp-options:       -DUSE_SGE
    other-modules:     Wrench.Backends.Sge.SGEPlatform
  else
    if flag(sdl)
      build-depends:     sdl2
                       , JuicyPixels
      cpp-options:       -DUSE_SDL
      other-modules:     Wrench.Backends.Sdl.Sdl2Platform
      other-modules:     Wrench.Backends.Sdl.Sdl2AudioLoader

  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  ghc-options: -Wall

executable example_sound
  main-is:             Sound.hs
  hs-source-dirs:      examples
  -- other-extensions:
  build-depends:       base >=4.7 && <4.9
                     , wrench
                     , classy-prelude
  if flag(sge)
    build-depends:     hsge
    cpp-options:       -DUSE_SGE
  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  ghc-options: -Wall

executable example_main
  main-is:             Main.hs
  hs-source-dirs:      examples
  -- other-extensions:
  build-depends:       base >=4.7 && <4.9
                     , wrench
                     , lens
                     , linear
                     , classy-prelude
  if flag(sge)
    build-depends:     hsge
    cpp-options:       -DUSE_SGE
  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  ghc-options: -Wall

executable example_bitmapfont
  main-is:             BitmapFont.hs
  hs-source-dirs:      examples
  -- other-extensions:
  build-depends:       base >=4.7 && <4.9
                     , wrench
                     , lens
                     , linear
                     , classy-prelude
                     , filepath
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  ghc-options: -Wall

test-suite hunit
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests/
  build-depends:       base >=4.7 && <4.8
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , wrench
                     , classy-prelude
                     , bytestring
                     , linear
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude